Improve custom checker-fixer example